# data-architect

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.claude/: gsd-file-manifest.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.opencode/agents/: gsd-debugger.md  gsd-executor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-verifier.md
.opencode/command/: gsd-debug.md  gsd-new-project.md  gsd-research-phase.md
.opencode/get-shit-done/references/: planning-config.md
.opencode/get-shit-done/workflows/: add-phase.md  add-todo.md  audit-milestone.md  check-todos.md  complete-milestone.md  discuss-phase.md  execute-phase.md  execute-plan.md  insert-phase.md  map-codebase.md  new-milestone.md  new-project.md  pause-work.md  plan-milestone-gaps.md  plan-phase.md  progress.md  quick.md  remove-phase.md  research-phase.md  resume-project.md  set-profile.md  settings.md  update.md  verify-phase.md  verify-work.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v0.3.0-MILESTONE-AUDIT.md  v1-MILESTONE-AUDIT.md
.planning/debug/: missing-precommit-config.md
.planning/milestones/: v0.1.0-REQUIREMENTS.md  v0.1.0-ROADMAP.md  v0.2.0-MILESTONE-AUDIT.md  v0.2.0-REQUIREMENTS.md  v0.2.0-ROADMAP.md  v0.3.0-REQUIREMENTS.md
.planning/phases/01-project-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-cli-scaffolding/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-VERIFICATION.md
.planning/phases/03-agent-definitions-opencode-integration/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-agent-quality-modeling-workflows/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-pre-commit-framework/: 05-01-PLAN.md  (+4 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
examples/northwind/: northwind.yaml
scripts/hooks/: commit-msg  pre-commit
src/data_architect/: __init__.py  __main__.py  cli.py  dab_init.py  scaffold.py  templates.py
tests/: test_cli.py  test_conflict.py  test_dab_init.py  test_ddl.py  test_dml.py  test_formatters.py  test_init.py  test_keyset.py  test_keyset_sql.py  test_models.py  test_scaffold.py  test_staging_models.py  test_validation.py  test_xml_export.py  test_xml_import.py  test_xml_roundtrip.py
tests/examples/: test_northwind_generation.py  test_northwind_roundtrip.py  test_northwind_spec.py
tests/fixtures/: duplicate_tie.yaml  invalid_spec_bad_ref.yaml  invalid_spec_duplicate_mnemonic.yaml  missing_required_field.yaml  nexus_bad_knot_ref.yaml  nexus_bad_role_ref.yaml  nexus_duplicate_attr.yaml  nexus_only_knot_roles.yaml  spec_with_nexus.yaml  valid_spec.yaml
(+71 files in other folders)
